--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,14 @@
 language: objective-c
 
+env:
+  global:
+    - APM_TEST_PACKAGES=""
+    - ATOM_LINT_WITH_BUNDLED_NODE="true"
+
+  matrix:
+    - ATOM_CHANNEL=stable
+    - ATOM_CHANNEL=beta
+
 notifications:
   email:
     on_success: never
@@ -32,4 +41,5 @@ jobs:
   include:
     - stage: release
       script:
+        - export PATH=$PATH:~/atom/usr/bin
         - apm publish patch
