--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ install:
   - chmod u+x build-package.sh
   - ./build-package.sh
   # Add apm to the PATH
-  - export PATH=$PATH:~/atom/usr/bin
+  #- export PATH=$PATH:~/atom/usr/bin
 
 script:
   - npm run test
@@ -32,5 +32,4 @@ jobs:
   include:
     - stage: release
       script:
-        - export PATH=$PATH:~/atom/usr/bin
         - apm publish patch
