--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ after_success:
 jobs:
   include:
     - stage: release
-      node_js: lts/*
+      node_js: node
       script:
         - npm run semantic-release
 
