--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ branches:
 
 install:
   # Retry install on fail to avoid failing a build on network/disk/external errors
+  - travis_retry npm install
   - travis_retry npm install -g npm@latest
   # See https://github.com/atom/ci
   - curl -s -O https://raw.githubusercontent.com/atom/ci/master/build-package.sh
