--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "semantic-release": "semantic-release"
   },
   "engines": {
-    "atom": ">=1.21.0"
+    "atom": ">=1.21.0",
+    "npm": ">=8.3"
   },
   "release": {
     "extends": "@semantic-release/apm-config"
