--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,7 @@ branches:
 
 install:
   # Retry install on fail to avoid failing a build on network/disk/external errors
-  - travis_retry npm install
-  - travis_retry npm install -g npm@latest
+  #- travis_retry npm install
   # See https://github.com/atom/ci
   - curl -s -O https://raw.githubusercontent.com/atom/ci/master/build-package.sh
   - chmod u+x build-package.sh
@@ -45,10 +44,6 @@ after_success:
 jobs:
   include:
     - stage: release
-      node_js: lts/*
+      #node_js: lts/*
       script:
         - npm run semantic-release
-
-branches:
-  only:
-    - master
