--- a/package.json
+++ b/package.json
@@ -6,14 +6,10 @@
   "repository": "https://github.com/karljaats/atom-package-CI-test",
   "license": "AGPL-3.0",
   "scripts": {
-    "test": "atom --test test",
-    "semantic-release": "semantic-release"
+    "test": "atom --test test"
   },
   "engines": {
     "atom": ">=1.21.0"
-  },
-  "release": {
-    "extends": "@semantic-release/apm-config"
   },
   "configSchema": {
     "javaHome": {
