missed one change

--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
-  "name": "package-ci-test",
+  "name": "ide-beyondql",
   "main": "./lib/main",
-  "version": "0.0.1",
-  "description": "Testing how to use ci with atom",
-  "repository": "https://github.com/karljaats/atom-package-CI-test",
-  "license": "AGPL-3.0",
+  "version": "0.0.0",
+  "description": "BeyondQL language support for Atom-IDE.",
+  "repository": "https://github.com/dojt/atom-ui-beyondQL",
+  "license": "AGPL-3.0 ",
   "scripts": {
     "test": "atom --test test"
   },
-  "engines": {
-    "atom": ">=1.21.0"
-  },
+  "engines": {"atom": ">=1.0.0 <2.0.0"},
   "configSchema": {
     "javaHome": {
       "order": 10,
@@ -61,7 +59,7 @@
     "chai-as-promised": "^5.3.0",
     "mocha": "^3.4.2",
     "mocha-appveyor-reporter": "^0.4.0",
-    "mocha-junit-and-console-reporter": "^1.6.0",
+    "mocha-junit-and-console-reporter": "^1.6.0"
   },
   "enhancedScopes": [
     "source.java"
